--- a/app/src/main/res/layout/activity_product_list.xml
+++ b/app/src/main/res/layout/activity_product_list.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProductList">
+    tools:context=".ProductList"
+    android:background="@mipmap/mix">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
