--- a/app/src/main/res/layout/activity_reg.xml
+++ b/app/src/main/res/layout/activity_reg.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.mypizzaapp.RegActivity"
-    android:background="@mipmap/background">
+    android:background="@mipmap/mix">
 
 
     <LinearLayout
@@ -19,6 +19,7 @@
 
         <EditText
             android:id="@+id/inputName"
+            android:textColor="@color/colorPrimary"
             android:layout_marginRight="20dp"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="20dp"
@@ -37,6 +38,7 @@
 
         <EditText
             android:id="@+id/inputEmail"
+            android:textColor="@color/colorPrimary"
             android:layout_marginRight="20dp"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="20dp"
@@ -55,6 +57,7 @@
 
         <EditText
             android:id="@+id/inpuPassword"
+            android:textColor="@color/colorPrimary"
             android:layout_marginRight="20dp"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="20dp"
@@ -77,7 +80,6 @@
             android:onClick="getDetails"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:background="@drawable/buttonstyle"
             android:text="Register"
             android:layout_marginLeft="125dp"
             android:layout_width="wrap_content"
