--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -69,6 +69,7 @@
 
         <Button
             android:onClick="getList"
+            android:background="@color/black"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:text="login"
@@ -92,6 +93,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/black"
             android:layout_alignTop="@+id/button2"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
